--- a/index.html
+++ b/index.html
@@ -6,43 +6,46 @@
     <link rel="stylesheet" type="text/css" href="liveeditor.css">
     <title>My Code Editor</title>
 </head>
-<header>
-	<h1>Welcome To Code Deck</h1>
-	<button class="buttonruncode" id="run" >Run </button> 
-	</header>
 <body>
-    <div class="codeeditor">
-		<section >
-		<h4 class="htmlText">HTML</h4>
-		<textarea id="html-area" r> </textarea>		
-	</section>
-	<section>
-		<h4 class="cssText">	CSS</h4>
-		<textarea id="css-area"> </textarea>
-	</section>
+    <header>
+        <h1>Welcome to Code Deck</h1>
+        <button class="buttonruncode" id="run">Run</button>
+    </header>
+    <main>
+        <div class="codeeditor">
+            <section>
+                <h4 class="htmlText">HTML</h4>
+                <textarea id="html-area" placeholder="Write your HTML here..."></textarea>
+            </section>
+            <section>
+                <h4 class="cssText">CSS</h4>
+                <textarea id="css-area" placeholder="Write your CSS here..."></textarea>
+            </section>
+            <section>
+                <h4 class="jsText">JavaScript</h4>
+                <textarea id="script-area" placeholder="Write your JavaScript here..."></textarea>
+            </section>
+        </div>
+        <div class="outputeditor">
+            <iframe id="output-frame" title="Output Frame" width="1200" height="250"></iframe>
+        </div>
+    </main>
+    <script type="text/javascript">
+        function run() {
+            const htmlCode = document.querySelector("#html-area").value;
+            const cssCode = `<style>${document.querySelector("#css-area").value}</style>`;
+            const scriptCode = document.querySelector("#script-area").value;
+            const output = document.querySelector("#output-frame");
 
-	<section >
-		<h4 class="jsText">	JS 	</h4>
-	    <textarea id="script-area" > </textarea>	
-	</section>
-</div>
-<div class="outputeditor">	
-	<iframe id="output-frame" width="1200" height="250" ></iframe>
-	</div>
- <script type="text/javascript">
-		function run(){
-			let htmlCode=document.querySelector(".codeeditor #html-area").value;
-			let cssCode="<style>"+document.querySelector(".codeeditor #css-area").value+"</style>";
-			let scriptCode=document.querySelector(".codeeditor #script-area").value;
-			let output =document.querySelector(".outputeditor #output-frame");
-			output.contentDocument.body.innerHTML=htmlCode+cssCode;
-			output.contentWindow.eval(scriptCode);
-		}
-		document.querySelector(".codeeditor #html-area").addEventListener("keyup",run);
-		document.querySelector(".codeeditor #css-area").addEventListener("keyup",run);
-		document.querySelector(".codeeditor #script-area").addEventListener("keyup",run);
-		
-	</script>
-    
+            output.contentDocument.body.innerHTML = htmlCode + cssCode;
+            output.contentWindow.eval(scriptCode);
+        }
+
+        // Add event listeners to run code when pressing the button or on keyup
+        document.getElementById("run").addEventListener("click", run);
+        document.querySelector("#html-area").addEventListener("keyup", run);
+        document.querySelector("#css-area").addEventListener("keyup", run);
+        document.querySelector("#script-area").addEventListener("keyup", run);
+    </script>
 </body>
 </html>
